<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/thanks_round_background"
        android:orientation="vertical"
        android:padding="@dimen/dp_30">

<!--
        <ImageView
            android:id="@+id/ivThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signup_success_thanks"
            android:layout_gravity="center"
            />
-->

        <TextView
            android:id="@+id/ivThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_thanks"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/loginColor"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/ivThanksDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_below="@+id/ivThanks"
            android:gravity="center"
            android:text="@string/register_successfully"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center"
            android:background="@drawable/btn_gradient_img2"
            android:text="@string/register_ok"
            android:visibility="gone"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>
</layout>