<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="profileVM"
            type="com.seasia.poojasarees.viewmodel.profile.ProfileVM" />

        <variable
            name="prof"
            type="com.seasia.poojasarees.model.helper.Profile" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="-15dp"
        android:background="@drawable/otp_background">

        <include
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/common_toolbar_transparent_manual_back"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/rlToolbar"
            android:background="@drawable/profile_tab_background"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabSelectedTextColor="@color/colorWhite"
            style="@style/MyTabLayout"
            app:tabTextColor="@color/colorWhiteOpaque">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_contact"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_personal" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabs"
            android:layout_marginBottom="@dimen/dp_120"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_50"
            >

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@drawable/profile_btn_transparent"
                android:onClick="@{(v) -> profileVM.onUpdateClick(v, prof)}"
                android:text="@string/profile_update"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/psBtnText" />

            <!--android:onClick="@{(v) -> profileVM.onCancelClick(prof)}"-->
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@drawable/profile_btn_transparent"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/profile_cancel"
                android:textColor="@color/psBtnText" />

        </LinearLayout>

    </RelativeLayout>
</layout>