<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addressVM"
            type="com.seasia.poojasarees.viewmodel.address.AddressVM" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="-15dp"
        android:background="@drawable/otp_background">

        <include
            android:id="@+id/rlToolbar"
            layout="@layout/common_toolbar_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlToolbar"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/address_saved_address"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:font="@{`bold`}" />

                <TextView
                    android:id="@+id/tvAddAddress"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorGreen"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/address_add_new"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/tv_no_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/address_no_record_found" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAddresses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
